--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,8 +273,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
-  background-size: cover;
+  background: url("../img/photo_2024-04-19_17-19-18.jpg") right no-repeat;
+  background-size: 45%;
   position: relative;
 }
 
